# simplesockets

./: .gitignore  README.md  SECURITY.md  index.html  ipv6.py  mkdocs.yml  securesocket.py  setup.cfg  setup.py  simple_sockets.py  simplesockets.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
Changelog/: index.html
PyCryptodome_Socket-reference/: index.html
Securesockets_selfwritten/: index.html
Selfmade_Crypto_Socket-reference/: index.html
_support_files/: RSA.py  b_veginer.py  cipher.py  error.py
docs/: Changelog.md  PyCryptodome_Socket-reference.md  Securesockets_selfwritten.md  Selfmade_Crypto_Socket-reference.md  index.md  securesockets-reference.md  securesockets_manual.md  simple_sockets-reference.md  simple_sockets_selfwritten.md  simplesockets_manual.md
example/: echo_client.py  echo_server.py
search/: search_index.json
securesockets/: Own_secure_sockets.py  S_Client.py  S_Server.py  Selfmade_Crypto_Socket_.py
simple_sockets-reference/: index.html
simple_sockets_selfwritten/: index.html
simplesockets/: .gitignore  README.md  __init__.py  secure_sockets.py  simple_sockets.py  typehints.py
simplesockets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simplesockets/_support_files/: Events.py  RSA.py  __init__.py  b_veginer.py  cipher.py  colum_transposition.py  error.py  primes.json  primes.py
site/: 404.html  index.html
support_files/: cipher.py
tests/: .coveragerc  test_PyCryptodome_Socket.py  test_SelfmadeCipher_Socket.py  test_secure_sockets.py  test_simple_sockets.py
(+9 files in other folders)
