[metadata]
name = simplesockets
version = 0.3.0
author = MrPoisen
#author_email = author@example.com
description = Allows the use of python sockets more easily
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrPoisen/simplesockets
project_urls =
    Bug Tracker = https://github.com/MrPoisen/simplesockets/issues
    Feature Requests = https://github.com/MrPoisen/simplesockets/issues
    Documentation = https://mrpoisen.github.io/simplesockets/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Development Status :: 4 - Beta
    Intended Audience :: Developers
#install_requires='pycryptodome'
[options]
packages = find:
python_requires = >=3.6

[aliases]
test=pytest
